tests/ui/generic-consts/inference-failure.stderr
error[E0282]: type annotations needed for `Option<T>`
  --> $DIR/inference-failure.rs:7:9
   |
LL |     let _ = NONE;
   |         ^
   |
help: consider giving this pattern a type, where the type for type parameter `T` is specified
   |
LL |     let _: Option<T> = NONE;
   |          +++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
